# Linux-Monitoring-system

./: .gitignore  CMakeLists.txt  README.md  main.cpp  top_monitor.md
inc/: display.h  format.h  linux_parser.h  parser.h  process.h  processor.h  system.h
src/: CMakeList.txt  CMakeLists.txt  display.cpp  format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  parser.cpp  process.cpp  processor.cpp  system.cpp
